package PointCalculator.EncircledAreaValidator;
import PointCalculator.EncircledArea;

public class TakableValidatorNaive extends EncircledAreaValidator {
    @Override
    public boolean test(EncircledArea encircledArea) {
        return false;
    }
}
